# catppuccin-palette

./: Cargo.toml
src/: main.rs
